--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:grid;
+	grid-template-rows:repeat(2,100px);
+	grid-template-columns:repeat(2,100px); 
+}
+.item-1{
+	background-color:red;
+}
+.item-2{
+	background-color:yellow;
+}
+.item-3{
+	background-color:red;
+}
+.item-3{
+	background-color:green;
+}
+.item-4{
+	background-color:blue;
+}
